# deep-reports-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: deep-reports-architecture.html  getting_started.md
examples/: basic_report.py  crewai_workflow.py  langgraph_workflow.py
src/deep_reports/: __init__.py  cli.py  config.py  cost.py  deep_report.py  security.py
src/deep_reports/agents/: __init__.py  base.py  critic_evidence.py  critic_quality.py  generator.py  refiner.py
src/deep_reports/orchestrator/: __init__.py  base.py  crewai_adapter.py  langgraph_adapter.py  native.py
src/deep_reports/providers/: __init__.py  anthropic.py  base.py  litellm.py  ollama.py  openai.py
tests/: conftest.py
tests/fixtures/sample_repo/sample_pkg/: __init__.py
tests/integration/: test_anthropic_real.py  test_cost_tracker.py  test_evidence_critic_real.py  test_generator_real.py  test_openai_real.py  test_quality_critic_real.py
tests/unit/: test_config.py  test_deep_report.py  test_native_orchestrator.py  test_protocols.py  test_providers_factory.py  test_security.py
