[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-reports"
version = "0.1.0"
description = "Multi-provider multi-orchestrator research report SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "thiendc", email = "thiendc@example.com" }
]
keywords = ["llm", "agent", "research", "report", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
litellm = ["litellm>=1.0"]
ollama = ["httpx>=0.27"]
langgraph = ["langgraph>=0.2,<1.0"]
crewai = ["crewai>=0.50"]
deepeval = ["deepeval>=0.20"]
pdf = ["weasyprint>=60.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.2",
    "ruff>=0.5",
    "tenacity>=8.0",
]
all = [
    "anthropic>=0.30",
    "openai>=1.0",
    "litellm>=1.0",
    "httpx>=0.27",
    "langgraph>=0.2,<1.0",
    "crewai>=0.50",
    "deepeval>=0.20",
    "weasyprint>=60.0",
]

[project.scripts]
deep-reports = "deep_reports.cli:cli"

[project.urls]
Homepage = "https://github.com/thiendc/deep-reports-sdk"
Repository = "https://github.com/thiendc/deep-reports-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_reports"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
testpaths = ["tests"]

[tool.deep-reports]
provider = "anthropic"
framework = "native"
agents = "all"
max-cost = 1.0

[tool.deep-reports.agent-models]
generator = ""
critic-evidence = ""
critic-quality = ""
